fix multi-viewer reload, setting up analysis pane